se crea carrito de compras, se crea la funcionalidad de rutinas automatizadas segun nivel

--- a/index.html
+++ b/index.html
@@ -1,15 +1,159 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <!-- Bootstrap Style -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Local Style -->
+    <link rel="shortcut icon" href="./images/small-logo.png">
+    <link rel="stylesheet" href="./public/css/common.css">
+    <link rel="stylesheet" href="./public/css/index.css">
 </head>
-<body>
-    
-
-<script src="./js/simulador.js"></script>
-
+<body class="d-flex flex-column min-vh-100">
+    <!--Header Start-->
+    <header>
+        <!--Div Container Start-->
+        <div class="container gradient-custom">
+            <!-- Navbar Code Start-->
+            <nav class="navbar navbar-expand-lg bg-light " role="navigation">
+                <div class="container-fluid d-flex navbar">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="./images/small-logo.svg" alt="" width="70" height=""
+                            class="d-inline-block align-text-top">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/tool.html">App</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/shop.html">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Proximamente</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex position-absolute  end-0">
+                            <button class="btn btn-outline-dark navCart " id="btnCart" type="button" onclick="window.location='./pages/cart.html';" >
+                                <i class="bi-cart-fill me-1 "></i> 
+                                Carrito
+                                <span class="badge bg-dark text-white ms-1 rounded-pill cart"  id="cart">0</span>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+            <!-- NavBar Code End-->
+            <!-- Banner Code Start-->
+            <img src="./images/background.png"
+                alt="Imagen de banner con verduras cortadas sobre un fondo verde. Las verduras son: pepino, apio, perejil, limon y lechuga"
+                class="backgroundImg">
+            <div class="imgContainer"></div>
+            <!-- Banner Code Start-->
+        </div>
+        <!-- Header Div Container End-->
+    </header>
+    <!-- Header End-->
+    <div>
+        <img class="mx-auto d-block mt-5" src="./images/big-logo.png" width="20%" alt="">
+    </div>
+    <!--Main layout-->
+    <main class="my-5 ">
+        <div class="container ">
+            <!--Section: Content-->
+            <section class="text-center">
+                <h1 class="mb-5 mt-4 ecommerceTitle text-center">Últimos Posteos</h1>
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 mb-4">
+                        <div class="card h-100">
+                            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                                <img src="./images/app.jpg" class="img-fluid imgBlog" />
+                                <a href="#!">
+                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Da el primer paso</h5>
+                                <p class="card-text">
+                                    ¿Alguna vez te preguntaste cuantas calorías realmente deberías consumir al día para
+                                    bajar tu peso,
+                                    para mantenerlo o para aumentarlo?
+                                    Con esta herramienta, podrás obtener información acerca de tu metabolismo, y así
+                                    poder tomar las
+                                    Mejores decisiones.
+                                </p>
+                                <a href="./pages/tool.html" class="">Link>></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                                <img src="./images/recipes .jpg" class="img-fluid imgBlog" />
+                                <a href="#!">
+                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Alimentación durante el confinamiento</h5>
+                                <p class="card-text">
+                                    En esta oportunidad, nuestro equipo se encargó de armar un recetario para tiempos de
+                                    confinamiento y para eso preparo una serie de recetas especiales, simples y
+                                    nutritivas.
+                                </p>
+                                <a href="./pages/recipes.html" class="">Link>></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card h-100">
+                            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                                <img src="./images/shop.jpg" class="img-fluid imgBlog" />
+                                <a href="#!">
+                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Conozca nuestra Tienda</h5>
+                                <p class="card-text">
+                                    Selección de libros para abordar las áreas pilares del
+                                    bienestar, físico, emocional, social, psicológico y fisiológico.
+                                </p>
+                                <br>
+                                <a href="./pages/shop.html" class="">Link>></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    </main>
+  <!-- Copyright -->
+  <div class="text-center text-dark p-3 footerBar mt-5">
+    <a class="text-light" href="#">© 2023 Copyright: Harut</a>
+  </div>
+  <!-- Copyright -->
+  </footer>
+  <!-- Footer Code End-->
+  <!-- Bootstrap Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous">
+  </script>
+  <!-- Fontawesomeicons -->
+  <script src="https://kit.fontawesome.com/b926aedcdc.js" crossorigin="anonymous"></script>
+  <!-- Local Scripts -->
+  <script src="../js/carText.js"></script>
+  <script src="../js/tool.js"></script>
 </body>
 </html>
