--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Local Style -->
-    <link rel="shortcut icon" href="./images/small-logo.png">
+    <link rel="shortcut icon" href="./images/small-logo.svg">
     <link rel="stylesheet" href="./public/css/common.css">
     <link rel="stylesheet" href="./public/css/index.css">
 </head>
@@ -153,7 +153,7 @@
   <!-- Fontawesomeicons -->
   <script src="https://kit.fontawesome.com/b926aedcdc.js" crossorigin="anonymous"></script>
   <!-- Local Scripts -->
-  <script src="../js/carText.js"></script>
-  <script src="../js/tool.js"></script>
+  <!-- <script src="../js/carText.js"></script> -->
+  <!-- <script src="../js/tool.js"></script> -->
 </body>
 </html>
