correccion de errores

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>IA Trainer - Home</title>
     <!-- Bootstrap Style -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
             <!-- Navbar Code Start-->
             <nav class="navbar navbar-expand-lg bg-light " role="navigation">
                 <div class="container-fluid d-flex navbar">
-                    <a class="navbar-brand" href="../index.html">
+                    <a class="navbar-brand" href="#">
                         <img src="./images/small-logo.svg" alt="" width="70" height=""
                             class="d-inline-block align-text-top">
                     </a>
@@ -68,14 +68,14 @@
     </header>
     <!-- Header End-->
     <div>
-        <img class="mx-auto d-block mt-5" src="./images/big-logo.png" width="20%" alt="">
+        <img class="mx-auto d-block mt-5" src="#" width="20%" alt="">
     </div>
     <!--Main layout-->
     <main class="my-5 ">
         <div class="container ">
             <!--Section: Content-->
             <section class="text-center">
-                <h1 class="mb-5 mt-4 ecommerceTitle text-center">Últimos Posteos</h1>
+                <h1 class="mb-5 mt-4 ecommerceTitle text-center">Todo lo que ofrecemos</h1>
                 <div class="row">
                     <div class="col-lg-4 col-md-12 mb-4">
                         <div class="card h-100">
@@ -86,15 +86,12 @@
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Da el primer paso</h5>
+                                <h5 class="card-title">Probá nuestra App</h5>
                                 <p class="card-text">
-                                    ¿Alguna vez te preguntaste cuantas calorías realmente deberías consumir al día para
-                                    bajar tu peso,
-                                    para mantenerlo o para aumentarlo?
-                                    Con esta herramienta, podrás obtener información acerca de tu metabolismo, y así
-                                    poder tomar las
-                                    Mejores decisiones.
-                                </p>
+                                     Con esta aplicación, podrás tener acceso a una variedad de herramientas para mejorar tu estilo de vida saludable. Una de las funciones es el medidor de índice de masa corporal (IMC), que te permitirá conocer tu peso en relación con tu altura y determinar si tienes un peso saludable. Además, también podrás calcular tu tasa metabólica basal (TMB), que es la cantidad de calorías que quemas en reposo y es un factor importante a tener en cuenta al planificar tu alimentación y rutina de ejercicios.
+
+                                    Nuestra aplicación también te brinda información sobre tus niveles de actividad física y te ofrece rutinas de entrenamiento personalizadas según tu nivel y preferencias.
+                                    
                                 <a href="./pages/tool.html" class="">Link>></a>
                             </div>
                         </div>
@@ -108,11 +105,9 @@
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Alimentación durante el confinamiento</h5>
+                                <h5 class="card-title">Proximamente</h5>
                                 <p class="card-text">
-                                    En esta oportunidad, nuestro equipo se encargó de armar un recetario para tiempos de
-                                    confinamiento y para eso preparo una serie de recetas especiales, simples y
-                                    nutritivas.
+                                    Proximamente
                                 </p>
                                 <a href="./pages/recipes.html" class="">Link>></a>
                             </div>
@@ -129,8 +124,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Conozca nuestra Tienda</h5>
                                 <p class="card-text">
-                                    Selección de libros para abordar las áreas pilares del
-                                    bienestar, físico, emocional, social, psicológico y fisiológico.
+                                    Bienvenido a nuestra sección de libros de entrenamiento deportivo. Aquí encontrarás una amplia variedad de libros y guías para ayudarte a alcanzar tus objetivos de fitness y mejorar tu rendimiento deportivo. Nuestros libros han sido escritos por expertos en el campo de la salud y el fitness, y cuentan con información actualizada y consejos prácticos para que puedas lograr tus objetivos de manera segura y efectiva. También encontrarás guías y planes de entrenamiento personalizados según tus necesidades y nivel de experiencia.
                                 </p>
                                 <br>
                                 <a href="./pages/shop.html" class="">Link>></a>
