--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Shop</title>
+    <title>IA Trainer - Shop</title>
 
 
     <!-- Bootstrap Style -->
@@ -192,10 +192,10 @@
                     data-mdb-ripple-color="dark"><i class="fab fa-google"></i></a>
                 <!-- Linkedin -->
                 <a class="btn btn-link btn-floating btn-lg text-dark m-1"
-                    href="https://www.linkedin.com/in/fabrizio-bertolo/" role="button" data-mdb-ripple-color="dark"><i
+                    href="#" role="button" data-mdb-ripple-color="dark"><i
                         class="fab fa-linkedin"></i></a>
                 <!-- Github -->
-                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/Fabrizionb"
+                <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://github.com/harutVanyan"
                     role="button" data-mdb-ripple-color="dark"><i class="fab fa-github"></i></a>
             </section>
             <!-- Section: Social media -->
@@ -203,9 +203,9 @@
         <!-- Grid container -->
 
         <!-- Copyright -->
-        <div class="text-center text-dark p-3 footerBar">
-            © 2022 Copyright:
-            <a class="text-dark" href="#">GetFit</a>
+        <div class="text-center text-white p-3 footerBar">
+            © 2023 Copyright: Harut
+            <a class="text-white" href="#"></a>
         </div>
         <!-- Copyright -->
     </footer>
