correccion de errores varias

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -45,7 +45,7 @@
                                 <a class="nav-link" href="./shop.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Proximamente</a>
+                                <a class="nav-link" href="./clima.html">Clima</a>
                             </li>
                         </ul>
                         <form class="d-flex position-absolute  end-0">
@@ -76,7 +76,7 @@
     </main>
     <!-- Copyright -->
     <div class="text-center text-dark p-3 footerBar mt-5">
-        <a class="text-light" href="#">© 2023 Copyright: Harut Vanyan</a>
+        <a class="text-light" href="#">© 2023 Copyright: Harut</a>
     </div>
     <!-- Copyright -->
     </footer>
