--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link" href="./pages/shop.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Proximamente</a>
+                                <a class="nav-link" href="./pages/clima.html">Clima</a>
                             </li>
                         </ul>
                         <form class="d-flex position-absolute  end-0">
@@ -99,17 +99,17 @@
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
                             <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                                <img src="./images/recipes .jpg" class="img-fluid imgBlog" />
+                                <img src="./images/clima.jpg" class="img-fluid imgBlog" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Proximamente</h5>
+                                <h5 class="card-title">Clima</h5>
                                 <p class="card-text">
-                                    Proximamente
+                                    Descubrí el clima actual en tu ubicación, para poder elegir que tipo actividad se adapta mejor para ese momento. 
                                 </p>
-                                <a href="./pages/recipes.html" class="">Link>></a>
+                                <a href="./pages/clima.html" class="">Link>></a>
                             </div>
                         </div>
                     </div>
