--- a/pages/cart.html
+++ b/pages/cart.html
@@ -55,7 +55,7 @@
                                 <a class="nav-link" href="./shop.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Proximamente</a>
+                                <a class="nav-link" href="./clima.html">Clima</a>
                             </li>
                         </ul>
                         <!-- <form class="d-flex position-absolute  end-0">
