--- a/pages/clima.html
+++ b/pages/clima.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IA Trainer - Shop</title>
+    <title>IA Trainer - Clima</title>
     <!-- Bootstrap Style -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
@@ -27,7 +27,7 @@
     <link rel="shortcut icon" href="../images/small-logo.svg" />
   </head>
 
-  <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100" >
     <!--Header Start-->
     <header>
       <!--Div Container Start-->
@@ -72,7 +72,7 @@
                   <a class="nav-link" href="./shop.html">Tienda</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Proximamente</a>
+                  <a class="nav-link" href="#">Clima</a>
                 </li>
               </ul>
               <form class="d-flex position-absolute end-0">
@@ -104,13 +104,13 @@
     </header>
     <!-- Header End-->
     <h1 class="mb-5 mt-4 ecommerceTitle text-center">
-        Consulta el clima para saber si es un buen dia para entrenar
+        Consulta el clima para elegir que actividad realizar
     </h1>
     <main class="weatherMain container">
 
       <button
         id="show-weather-btn"
-        class="text-center btn btn-lg btn-block btn-primary submit" onclick=handleClick()
+        class="text-center btn btn-lg btn-block btn-primary submit" 
       >
         Mostrar información del clima
       </button>
@@ -124,9 +124,11 @@
       </div>
     </main>
     <!-- Copyright -->
+    <footer class="footer-clima">
     <div class="text-center text-dark p-3 footerBar mt-5">
-      <a class="text-light" href="#">© 2023 Copyright: Harut Vanyan</a>
+      <a class="text-light" href="#">© 2023 Copyright: Harut</a>
     </div>
+    </footer>
     <!-- Copyright -->
 
     <!-- Footer Code End-->
