--- a/pages/tool.html
+++ b/pages/tool.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="./shop.html">Tienda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Proximamente</a>
+                <a class="nav-link" href="./clima.html">Clima</a>
               </li>
               <form class="d-flex position-absolute  end-0">
                 <button class="btn btn-outline-dark navCart " id="btnCart" type="button" onclick="window.location='./cart.html';" >
@@ -129,6 +129,7 @@
       <div class="container resultC">
 
         <div id="app" class="row row-cols-1 row-cols-sm-3 g-4"></div>
+        
       </div>
     </div>
   </div>
